# Forkway_test

./: .env  .gitignore  Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ТЗ fastApi.docx
data_add_scripts/: add_customers.py  add_employees.py  add_orders.py  add_outlets.py  add_visits.py  confdata.py
migrations/: env.py
migrations/versions/: 2023_08_29_1305-7691d1ee9a6e_create_database.py
models/: models.py
routers/admin/: admin.py  customer.py  employee.py  order.py  outlet.py  visit.py
routers/shop/: order_crud.py  outlets_by_phone.py  shop.py  status_order.py  visit_crud.py
schemas/: admin.py  shop.py
tests/: conftest.py
tests/test_admin/: test_employee.py  test_outlet.py
tests/test_shop/: test_order.py
